; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freertos/test/extr_test_freertos_isinisrcontext.c_testthread.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freertos/test/extr_test_freertos_isinisrcontext.c_testthread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@in_int_context = common dso_local global i32 0, align 4
@int_handled = common dso_local global i32 0, align 4
@ETS_INTERNAL_TIMER1_INTR_SOURCE = common dso_local global i32 0, align 4
@testint = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@portTICK_PERIOD_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @testthread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @testthread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 0, i32* @in_int_context, align 4
  store i32 0, i32* @int_handled, align 4
  %5 = call i32 (...) @xPortInIsrContext()
  %6 = icmp ne i32 %5, 0
  %7 = xor i1 %6, true
  %8 = zext i1 %7 to i32
  %9 = call i32 @TEST_ASSERT(i32 %8)
  %10 = call i64 (...) @xthal_get_ccount()
  %11 = add nsw i64 %10, 8000000
  %12 = call i32 @xthal_set_ccompare(i32 1, i64 %11)
  %13 = load i32, i32* @ETS_INTERNAL_TIMER1_INTR_SOURCE, align 4
  %14 = call i32 @esp_intr_alloc(i32 %13, i32 0, i32* @testint, i32* null, i32* %3)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* @ESP_OK, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @TEST_ASSERT_EQUAL_HEX32(i32 %15, i32 %16)
  %18 = load i32, i32* @portTICK_PERIOD_MS, align 4
  %19 = sdiv i32 100, %18
  %20 = call i32 @vTaskDelay(i32 %19)
  %21 = load i32, i32* @int_handled, align 4
  %22 = call i32 @TEST_ASSERT(i32 %21)
  %23 = load i32, i32* @in_int_context, align 4
  %24 = call i32 @TEST_ASSERT(i32 %23)
  %25 = load i32, i32* @ESP_OK, align 4
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @esp_intr_free(i32 %26)
  %28 = call i32 @TEST_ASSERT_EQUAL_HEX32(i32 %25, i32 %27)
  %29 = call i32 @vTaskDelete(i32* null)
  ret void
}

declare dso_local i32 @TEST_ASSERT(i32) #1

declare dso_local i32 @xPortInIsrContext(...) #1

declare dso_local i32 @xthal_set_ccompare(i32, i64) #1

declare dso_local i64 @xthal_get_ccount(...) #1

declare dso_local i32 @esp_intr_alloc(i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @TEST_ASSERT_EQUAL_HEX32(i32, i32) #1

declare dso_local i32 @vTaskDelay(i32) #1

declare dso_local i32 @esp_intr_free(i32) #1

declare dso_local i32 @vTaskDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
